--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-babel": "^5.0.3"
   },
   "devDependencies": {
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-less": "^1.0.1"
   },
