--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "directories": {
     "test": "tests"
   },
-  "dependencies": {
+  "devDependencies": {
     "grunt-contrib-uglify": "^0.9.2",
     "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.3"
-  },
-  "devDependencies": {
+    "grunt-babel": "^5.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-less": "^1.0.1"
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
