--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "material-datepicker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Datepicker, Monthpicker in Google Material Design",
   "main": "gruntfile.js",
-  "directories": {
-    "test": "tests"
-  },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.9.2",
     "grunt-babel": "^5.0.3",
+    "grunt-cli": "^1.3.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run development",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "grunt",
+    "development": "grunt watch"
   },
   "repository": {
     "type": "git",
@@ -30,10 +31,11 @@
     "design",
     "google"
   ],
-  "author": "Freddy Ochner",
+  "author": "Freddy Ochner <freddy@ochner.it> (https://freddy.ochner.it)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/FreddyFY/material-datepicker/issues"
   },
-  "homepage": "https://github.com/FreddyFY/material-datepicker#readme"
+  "homepage": "http://freddyfy.github.io/material-datepicker/",
+  "dependencies": {}
 }
