--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Datepicker, Monthpicker in Google Material Design",
   "main": "gruntfile.js",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.3",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "grunt": "^1.0.3",
+    "grunt-babel": "^8.0.0",
     "grunt-cli": "^1.3.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0"
   },
   "scripts": {
     "start": "npm run development",
